Thinner facebook.png used

--- a/sig.html
+++ b/sig.html
@@ -5,7 +5,7 @@
   <body>    
     <table style="color: #403a60; font-family: sans-serif; font-size: 68%; max-width: 500px;">
       <tr>
-        <td style="border-right: 1px solid black; width: 96px;"><img style="width: 92px;" src="https://user-images.githubusercontent.com/383669/72074948-b9d98d80-32ea-11ea-8f3c-09ed8e748d5c.png" alt=" " /></td>
+        <td style="border-right: 1px solid black; padding-right: 2px; width: 96px;"><img style="width: 92px;" src="https://user-images.githubusercontent.com/383669/72074948-b9d98d80-32ea-11ea-8f3c-09ed8e748d5c.png" alt=" " /></td>
         <td>
           <table>
             <tr>
@@ -28,11 +28,11 @@
               <td>
                 <table>
                   <tr>
-                    <td align="center"><a href="https://www.twitter.com/" style="color: #403a60; text-decoration: none;"/><img style="width: 24px;" src="https://user-images.githubusercontent.com/383669/72075035-daa1e300-32ea-11ea-9ff1-0d0d86cf6982.png" alt="Tw" /></a>
-                    <a href="https://www.facebook.com/" style="color: #403a60; text-decoration: none;"/><img style="width: 24px;" src="https://user-images.githubusercontent.com/383669/72074989-cc53c700-32ea-11ea-8f25-f3116f7a27b9.png" alt="Fa" /></a>
-                    <a href="https://www.blogger.com/" style="color: #403a60; text-decoration: none;"/><img style="width: 24px;" src="https://user-images.githubusercontent.com/383669/72074975-c5c54f80-32ea-11ea-8191-ccd4dfffa7eb.png" alt="Bl" /></a>
-                    <a href="https://www.linkedin.com/" style="color: #403a60; text-decoration: none;"/><img style="width: 24px;" src="https://user-images.githubusercontent.com/383669/72075021-d675c580-32ea-11ea-883b-91a838c15ad3.png" alt="Li" /></a>
-                    <a href="https://www.instagram.com/" style="color: #403a60; text-decoration: none;"/><img style="width: 24px;" src="https://user-images.githubusercontent.com/383669/72075005-d2e23e80-32ea-11ea-812b-75b233bf8a42.png" alt="In" /></a></td>
+                    <td align="center" style="padding-right: 7px;"><a href="https://www.twitter.com/" style="color: #403a60; text-decoration: none;"/><img style="height: 24px;" src="https://user-images.githubusercontent.com/383669/72075035-daa1e300-32ea-11ea-9ff1-0d0d86cf6982.png" alt="Tw" /></a>
+                    <a href="https://www.facebook.com/" style="color: #403a60; text-decoration: none;"/><img style="height: 24px;" src="https://user-images.githubusercontent.com/383669/72168862-e9a99380-33c5-11ea-9142-0e71a5120b31.png" alt="Fa" /></a>
+                    <a href="https://www.blogger.com/" style="color: #403a60; text-decoration: none;"/><img style="height: 24px;" src="https://user-images.githubusercontent.com/383669/72074975-c5c54f80-32ea-11ea-8191-ccd4dfffa7eb.png" alt="Bl" /></a>
+                    <a href="https://www.linkedin.com/" style="color: #403a60; text-decoration: none;"/><img style="height: 24px;" src="https://user-images.githubusercontent.com/383669/72075021-d675c580-32ea-11ea-883b-91a838c15ad3.png" alt="Li" /></a>
+                    <a href="https://www.instagram.com/" style="color: #403a60; text-decoration: none;"/><img style="height: 24px;" src="https://user-images.githubusercontent.com/383669/72075005-d2e23e80-32ea-11ea-812b-75b233bf8a42.png" alt="In" /></a></td>
                   </tr>
                 </table>
               </td>
