--- a/sig.html
+++ b/sig.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html>
   <meta http-equiv="Content-Type" content="text/html charset=UTF-8" />
-  <head></head>
+  <head>
+  </head>
   <body>    
-    <table style="color: #403a60; font-family: sans-serif; font-size: 68%; max-width: 500px;">
+    <font style="color: #403a60; font-family: sans-serif;">CUSTOM TEXT HERE e.g. "Regards" OR DELETE THIS SENTENCE.</font>
+    <table style="color: #403a60; font-family: sans-serif; font-size: 68%; max-width: 500px;" cellpadding="0" cellspacing="0">
       <tr>
-        <td style="border-right: 1px solid black; padding-right: 2px; width: 96px;"><img style="width: 92px;" src="https://user-images.githubusercontent.com/383669/72074948-b9d98d80-32ea-11ea-8f3c-09ed8e748d5c.png" alt=" " /></td>
+        <td style="width: 96px; text-align: center;">
+          <a href="http://www.leoch.com/" /><img style="padding-right: 5px; width: 96px;" src="https://user-images.githubusercontent.com/383669/72433618-9b174300-3791-11ea-91aa-00e482cbe42c.png" alt=" " /></a>
+          
+          <a href="https://dbsleoch.co.uk/" /><img style="padding-right: 5px; padding-top: 5px;" src="https://user-images.githubusercontent.com/383669/72607071-caf05300-3917-11ea-946b-c4e129790ee1.png" alt=" " /></a></td>
         <td>
-          <table>
+          <table cellpadding="0" cellspacing="0">
             <tr>
-              <td>
+              <td style="padding-left: 10px; border-left: 1px solid #403a60;">
                 <img style="width: 36px;" src="https://user-images.githubusercontent.com/383669/72074887-a0384600-32ea-11ea-92ed-f817d4f3ef9a.png" alt=" " /></td>
-              <td>
+              <td style="padding-left: 5px;">
                 <b><font style="font-size: 136%;">
                   
                   Vanessa Human
@@ -23,23 +28,23 @@
               </td>
             </tr>
           </table>
-          <table>
+          <table cellpadding="0" cellspacing="0">
             <tr>
-              <td>
-                <table>
+              <td style="border-left: 1px solid #403a60;">
+                <table cellpadding="0" cellspacing="0" width="100%">
                   <tr>
-                    <td align="center" style="padding-right: 7px;"><a href="https://www.twitter.com/" style="color: #403a60; text-decoration: none;"/><img style="height: 24px;" src="https://user-images.githubusercontent.com/383669/72075035-daa1e300-32ea-11ea-9ff1-0d0d86cf6982.png" alt="Tw" /></a>
-                    <a href="https://www.facebook.com/" style="color: #403a60; text-decoration: none;"/><img style="height: 24px;" src="https://user-images.githubusercontent.com/383669/72168862-e9a99380-33c5-11ea-9142-0e71a5120b31.png" alt="Fa" /></a>
-                    <a href="https://www.blogger.com/" style="color: #403a60; text-decoration: none;"/><img style="height: 24px;" src="https://user-images.githubusercontent.com/383669/72074975-c5c54f80-32ea-11ea-8191-ccd4dfffa7eb.png" alt="Bl" /></a>
-                    <a href="https://www.linkedin.com/" style="color: #403a60; text-decoration: none;"/><img style="height: 24px;" src="https://user-images.githubusercontent.com/383669/72075021-d675c580-32ea-11ea-883b-91a838c15ad3.png" alt="Li" /></a>
-                    <a href="https://www.instagram.com/" style="color: #403a60; text-decoration: none;"/><img style="height: 24px;" src="https://user-images.githubusercontent.com/383669/72075005-d2e23e80-32ea-11ea-812b-75b233bf8a42.png" alt="In" /></a></td>
+                    <td align="center" style="padding-left: 10px;  padding-right: 7px; width: 100%;"><a href="https://twitter.com/dbsleochltd" style="color: #403a60; text-decoration: none;"/><img style="height: 24px;" src="https://user-images.githubusercontent.com/383669/72075035-daa1e300-32ea-11ea-9ff1-0d0d86cf6982.png" alt="Tw" /></a>
+                    &nbsp;<a href="https://www.facebook.com/DBS-Energy-Ltd-1721915558023079/" style="color: #403a60; text-decoration: none;"/><img style="height: 24px;" src="https://user-images.githubusercontent.com/383669/72168862-e9a99380-33c5-11ea-9142-0e71a5120b31.png" alt="Fa" /></a>
+                    &nbsp;<a href="https://dbsleoch.co.uk/blog/" style="color: #403a60; text-decoration: none;"/><img style="height: 24px;" src="https://user-images.githubusercontent.com/383669/72074975-c5c54f80-32ea-11ea-8191-ccd4dfffa7eb.png" alt="Bl" /></a>
+                    &nbsp;<a href="https://uk.linkedin.com/company/dbs-energy-ltd" style="color: #403a60; text-decoration: none;"/><img style="height: 24px;" src="https://user-images.githubusercontent.com/383669/72075021-d675c580-32ea-11ea-883b-91a838c15ad3.png" alt="Li" /></a>
+                    &nbsp;<a href="https://www.instagram.com/dbsleochltd/" style="color: #403a60; text-decoration: none;"/><img style="height: 24px;" src="https://user-images.githubusercontent.com/383669/72075005-d2e23e80-32ea-11ea-812b-75b233bf8a42.png" alt="In" /></a></td>
                   </tr>
                 </table>
               </td>
-              <td style="border-left: 1px solid black; padding: 0 0 0 1em;">
+              <td style="border-left: 1px solid #403a60; padding: 0 0 0 1em;">
                 <b>T:&nbsp;</b>01858&nbsp;433&nbsp;330<br />
                 <b>M:&nbsp;</b>07957&nbsp;399&nbsp;368<br />
-                <b>W:&nbsp;</b><a href="https://dbsleoch.co.uk" style="color: #403a60; text-decoration: none;"/>dbsleoch.co.uk<br />
+                <b>W:&nbsp;</b><a href="https://dbsleoch.co.uk" style="color: #403a60; text-decoration: none;"/>dbsleoch.co.uk</a><br />
             </td>
           </tr>
           </table>
@@ -47,7 +52,8 @@
 
       </tr>
       <tr>
-        <td colspan="2" style="font-size: 76%;">DBS LEOCH LTD | Unit B5, Welland Business Park, Market Harborough, Leicestershire, LE16 7PS. Company Registered in England & Wales  |  Company No. 9833224  |  VAT No. 227 5435 07</td>
+        <td colspan="2" style="font-size: 76%;">
+          <br />DBS LEOCH LTD | Unit B5, Welland Business Park, Market Harborough, Leicestershire, LE16 7PS. Company Registered in England & Wales  |  Company No. 9833224  |  VAT No. 227 5435 07</td>
       </tr>
     </table>    
   </body>
